# foxHippoRAG

./: .env.example  .gitignore  CONTRIBUTING.md  C_EXTENSION_SUMMARY.md  DEVELOPMENT.md  README.md  benchmark_performance.py  benchmark_rust_extension.py  build_rust.py  check_rust_module.py  demo.py  demo_ai_assistant_async.py  demo_ai_assistant_hipporag.py  demo_ai_assistant_hipporag_optimized.py  demo_azure.py  demo_bedrock.py  demo_local.py  demo_openai.py  demo_speed_optimization.py  main.py  main_azure.py  main_dpr.py  pyproject.toml  requirements.txt  setup.py  setup_c_extension.py  simple_benchmark.py  test_algorithm_optimizations.py  test_async_performance.py  test_c_extension.py  test_evidence_quality.py  test_forgetting_mechanism.py  test_numba_optimization.py  test_optimization.py  test_performance.py  test_rust_extension.py  test_simple.py  test_speed_optimization.py  test_stress.py  verify_c_extension.py  (+1 more)
.github/workflows/: ci.yml  publish.yml
src/foxHippoRAG.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/foxhipporag/: StandardRAG.py  __init__.py  embedding_store.py  foxHippoRAG.py  foxHippoRAG_optimized.py  rerank.py
src/foxhipporag/c_extension/: README.md  __init__.py  foxhipporag_cext.c  foxhipporag_cext.h  foxhipporag_cext_module.c
src/foxhipporag/embedding_model/: Contriever.py  GritLM.py  NVEmbedV2.py  OpenAI.py  Transformers.py  __init__.py  base.py
src/foxhipporag/evaluation/: base.py  qa_eval.py  retrieval_eval.py
src/foxhipporag/information_extraction/: __init__.py  openie_openai_async.py
src/foxhipporag/llm/: __init__.py  base.py  openai_gpt.py  transformers_llm.py  transformers_offline.py  vllm_offline.py
src/foxhipporag/prompts/: __init__.py  prompt_template_manager.py
src/foxhipporag/retrieval/: __init__.py  passage_density.py
src/foxhipporag/utils/: __init__.py  algorithm_optimizations.py  async_utils.py  c_utils.py  config_utils.py  embed_utils.py  forgetting_mechanism.py  typing.py  (+7 more)
(+6 files in other folders)
